# ragdiff

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GUIDE.md  MIGRATION.md  README.md  TESTING_SUMMARY.md  api-refactor-guidance.md  arch.md  eval-report.json  llms-full.txt  llms.txt  md2pdf.py  pyproject.toml  requirements.txt
.claude/agents/: architecture-documenter.md  codev-updater.md
codev/: README.md
codev/agents/: architecture-documenter.md
codev/plans/: 0001-rag-comparison-harness.md  0002-adapter-variants.md  0003-library-refactoring.md  0004-multi-tenant-credentials.md  0005-library-refactoring.md  0005-mongodb-adapter.md  0006-domain-restructure-v2.md  0006-openapi-adapter-implementation.md  mongodb-adapter-plan.md  openapi-adapter-implementation.md
codev/protocols/spider/: protocol.md
codev/protocols/spider-solo/: protocol.md
codev/protocols/spider-solo/templates/: plan.md  spec.md
codev/protocols/spider/templates/: plan.md  review.md
codev/resources/: arch.md  goodmem-operational.md
codev/reviews/: 0001-rag-comparison-harness.md  0002-adapter-variants.md  0004-multi-tenant-credentials.md  0005-domain-based-architecture-v2.md  0006-library-refactoring-final-review.md  0006-openapi-adapter-review.md  0007-evaluation-parallelization.md
codev/specs/: 0001-rag-comparison-harness.md  0002-adapter-variants.md  0002-rag-system-generalization.md  0003-agentset-adapter.md  0004-adapter-variants.md  0004-multi-tenant-credentials.md  0005-api-refactoring.md  0005-library-refactoring.md  0005-mongodb-adapter.md  0006-domain-restructure-v2.md  0006-openapi-adapter-system.md  0007-evaluation-parallelization.md  openapi-adapter-system.md
configs/: faiss-example.yaml  kalimat-example.yaml  mawsuah.yaml  mongodb-example.yaml  tafsir.yaml  tools.yaml  tools.yaml.example
configs/examples/: openapi-adapter-example.yaml
docs/: competitive-analysis.md  deep-dive-scarf-tonic.md
domains/tafsir/providers/: goodmem-ibn-kathir.yaml
examples/: README.md  fastapi_integration.py  mock_kalimat_generation.py
examples/squad-demo/: .gitignore  README.md  REBUILD.md  comparison-report-final.md  comparison-report-new.md  comparison-report.md  domain.yaml  pyproject.toml  requirements.txt  setup_notebook.sh  squad_demo_api.ipynb  three-way-comparison.md
examples/squad-demo/domains/squad/: domain.yaml
examples/squad-demo/domains/squad/providers/: bm25-keyword.yaml  faiss-large.yaml  faiss-small.yaml
examples/squad-demo/providers/: faiss-ip.yaml  faiss-l2.yaml
examples/squad-demo/scripts/: build_faiss_ip.py  build_faiss_l2.py  build_faiss_large.py  build_faiss_simple.py  generate_queries.py  generate_reference_queries.py  setup_all.sh  setup_dataset.py  setup_synthetic_dataset.py  test_setup.py
inputs/: tafsir-test-queries.txt
sampledata/: README.md  load_squad_to_mongodb.py  sample_squad_questions.py
src/: __main__.py  cli.py
src/adapters/: base.py  factory.py  goodmem.py  mawsuah.py  search_vectara_mock.py
src/comparison/: __init__.py
src/core/: config.py  models.py
src/display/: __init__.py
src/evaluation/: evaluator.py
src/ragdiff/: __init__.py  __main__.py  api.py  cli.py  cli_v2.py  version.py
src/ragdiff/adapters/: __init__.py  abc.py  agentset.py  base.py  factory.py  faiss.py  goodmem.py  mawsuah.py  mongodb.py  openapi.py  openapi_mapping.py  registry.py  search_vectara_mock.py  vectara.py
src/ragdiff/comparison/: __init__.py  engine.py  evaluator.py  reference_evaluator.py
src/ragdiff/core/: config.py  env_vars.py  errors.py  loaders.py  logging.py  models.py  models_v2.py  paths.py  pricing.py  serialization.py  storage.py
src/ragdiff/display/: __init__.py  formatter.py  formatting.py  formatting_v2.py
src/ragdiff/evaluation/: __init__.py  evaluator.py
src/ragdiff/execution/: __init__.py  executor.py
src/ragdiff/openapi/: __init__.py  ai_analyzer.py  generator.py  models.py  parser.py
src/ragdiff/providers/: __init__.py  abc.py  agentset.py  bm25.py  factory.py  faiss.py  goodmem.py  google_file_search.py  mongodb.py  openapi.py  openapi_utils.py  registry.py  vectara.py
src/ragdiff/systems/: __init__.py  abc.py  agentset.py  factory.py  mongodb.py  registry.py  vectara.py
tests/: test_adapter_factory.py  test_adapters.py  test_agentset_adapter.py  test_api_multi_tenant.py  test_base_adapter.py  test_batch_and_export.py  test_cli.py  test_cli_v2.py  test_comparison.py  test_comparison_engine.py  test_config.py  test_core.py  test_core_components.py  test_core_v2.py  test_display_formatter.py  test_execution.py  test_goodmem_adapter.py  test_google_file_search.py  test_integration.py  test_llm_evaluator.py  test_mawsuah_adapter.py  test_models.py  test_multi_tenant.py  test_object_api.py  test_openapi_adapter.py  test_openapi_parser.py  test_parity.py  test_phase1_foundation.py  test_phase2_adapter_migration.py  test_phase4_library_interface.py  test_providers.py  test_public_api.py  test_serialization.py  test_space_ids_config.py  test_squad_demo.py  test_systems.py  test_vectara_adapter.py
tests/benchmarks/: baseline.py  baseline_outputs.json  baseline_results.json
tests/parity/: __init__.py  framework.py
tests/parity/fixtures/: test_config.yaml
